--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -557,10 +557,11 @@
     },
     "auto_start_stop": {
       "options": {
-        "auto_start_stop_none": "No auto start/stop",
-        "auto_start_stop_slow": "Slow detection",
-        "auto_start_stop_medium": "Medium detection",
-        "auto_start_stop_fast": "Fast detection"
+        "auto_start_stop_none": "Désactivé",
+        "auto_start_stop_very_slow": "Très lente",
+        "auto_start_stop_slow": "Lente",
+        "auto_start_stop_medium": "Medium",
+        "auto_start_stop_fast": "Rapide"
       }
     }
   },
