--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -109,12 +109,20 @@
         "data": {
           "tpi_coef_int": "coeff_int",
           "tpi_coef_ext": "coeff_ext",
+          "tpi_threshold_low": "TPI seuil bas",
+          "tpi_threshold_high": "TPI seuil haut",
+          "minimal_activation_delay": "Délai minimal d'activation",
+          "minimal_deactivation_delay": "Délai de désactivation minimal",
           "use_tpi_central_config": "Utiliser la configuration TPI centrale"
         },
         "data_description": {
           "tpi_coef_int": "Coefficient à utiliser pour le delta de température interne",
           "tpi_coef_ext": "Coefficient à utiliser pour le delta de température externe",
-          "use_tpi_central_config": "Cochez pour utiliser la configuration TPI centrale. Décochez et saisissez les attributs pour utiliser une configuration TPI spécifique"
+          "tpi_threshold_low": "Seuil en ° en dessous duquel le TPI sera activé. 0 signifie pas de seuil",
+          "tpi_threshold_high": "Seuil en ° au-dessus duquel l'algorithme TPI sera désactivé. 0 signifie pas de seuil",
+          "use_tpi_central_config": "Cochez pour utiliser la configuration TPI centrale. Décochez et saisissez les attributs pour utiliser une configuration TPI spécifique",
+          "minimal_activation_delay": "Délai en secondes en-dessous duquel l'équipement ne sera pas activé",
+          "minimal_deactivation_delay": "Délai en secondes en-dessous duquel l'équipement se laissé actif"
         }
       },
       "presets": {
@@ -199,16 +207,12 @@
         "title": "Paramètres avancés",
         "description": "Configuration des paramètres avancés. Laissez les valeurs par défaut si vous ne savez pas ce que vous faites.\nCes paramètres peuvent induire des mauvais comportements du thermostat&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/fr/feature-advanced.md)",
         "data": {
-          "minimal_activation_delay": "Délai minimal d'activation",
-          "minimal_deactivation_delay": "Délai de désactivation minimal",
           "safety_delay_min": "Délai maximal entre 2 mesures de températures",
           "safety_min_on_percent": "Pourcentage minimal de puissance",
           "safety_default_on_percent": "Pourcentage de puissance a utiliser en mode securité",
           "use_advanced_central_config": "Utiliser la configuration centrale avancée"
         },
         "data_description": {
-          "minimal_activation_delay": "Délai en secondes en-dessous duquel l'équipement ne sera pas activé",
-          "minimal_deactivation_delay": "Délai en secondes en-dessous duquel l'équipement se laissé actif",
           "safety_delay_min": "Délai maximal autorisé en minutes entre 2 mesures de températures. Au-dessus de ce délai, le thermostat se mettra en position de sécurité",
           "safety_min_on_percent": "Seuil minimal de pourcentage de chauffage en-dessous duquel le préréglage sécurité ne sera jamais activé",
           "safety_default_on_percent": "Valeur par défaut pour le pourcentage de chauffage en mode sécurité. Mettre 0 pour éteindre le radiateur en mode sécurité",
@@ -363,8 +367,22 @@
         "title": "TPI - {name}",
         "description": "Attributs de l'algo Time Proportional Integral&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/fr/algorithms.md#lalgorithme-tpi)",
         "data": {
-          "tpi_coef_int": "coeff_int : Coefficient à utiliser pour le delta de température interne",
-          "tpi_coef_ext": "coeff_ext : Coefficient à utiliser pour le delta de température externe"
+          "tpi_coef_int": "coeff_int",
+          "tpi_coef_ext": "coeff_ext",
+          "tpi_threshold_low": "TPI seuil bas",
+          "tpi_threshold_high": "TPI seuil haut",
+          "minimal_activation_delay": "Délai minimal d'activation",
+          "minimal_deactivation_delay": "Délai de désactivation minimal",
+          "use_tpi_central_config": "Utiliser la configuration TPI centrale"
+        },
+        "data_description": {
+          "tpi_coef_int": "Coefficient à utiliser pour le delta de température interne",
+          "tpi_coef_ext": "Coefficient à utiliser pour le delta de température externe",
+          "tpi_threshold_low": "Seuil en ° en dessous duquel le TPI sera activé. 0 signifie pas de seuil",
+          "tpi_threshold_high": "Seuil en ° au-dessus duquel l'algorithme TPI sera désactivé. 0 signifie pas de seuil",
+          "use_tpi_central_config": "Cochez pour utiliser la configuration TPI centrale. Décochez et saisissez les attributs pour utiliser une configuration TPI spécifique",
+          "minimal_activation_delay": "Délai en secondes en-dessous duquel l'équipement ne sera pas activé",
+          "minimal_deactivation_delay": "Délai en secondes en-dessous duquel l'équipement sera laissé actif"
         }
       },
       "presets": {
@@ -458,7 +476,7 @@
         },
         "data_description": {
           "minimal_activation_delay": "Délai en secondes en-dessous duquel l'équipement ne sera pas activé",
-          "minimal_deactivation_delay": "Délai en secondes en-dessous duquel l'équipement se laissé actif",
+          "minimal_deactivation_delay": "Délai en secondes en-dessous duquel l'équipement sera laissé actif",
           "safety_delay_min": "Délai maximal autorisé en minutes entre 2 mesures de températures. Au-dessus de ce délai, le thermostat se mettra en position de sécurité",
           "safety_min_on_percent": "Seuil minimal de pourcentage de chauffage en-dessous duquel le préréglage sécurité ne sera jamais activé",
           "safety_default_on_percent": "Valeur par défaut pour le pourcentage de chauffage en mode sécurité. Mettre 0 pour éteindre le radiateur en mode sécurité",
